feat: initialize frontend project with React, TypeScript, and Vite
- Added package.json with dependencies and scripts for development and build.
- Included Vite logo SVG in public directory.
- Created App.css for styling the application layout.
- Implemented main App component with routing and private route handling.
- Added React logo SVG in assets directory.
- Developed LoginForm component for user authentication.
- Created UserForm component for adding and editing users.
- Implemented UserList component for displaying and managing users.
- Set up API service for user-related operations using Axios.
- Defined User and UserInput types for TypeScript.
- Configured TypeScript settings with tsconfig files.
- Established Vite configuration for development server.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,20 @@ services:
       - DB_USERNAME=root
       - DB_PASSWORD=root
 
+  frontend:
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile
+    ports:
+      - "3000:3000"
+    volumes:
+      - ./frontend:/app
+      - /app/node_modules
+    environment:
+      - VITE_API_URL=http://localhost:8000/api
+    depends_on:
+      - backend
+
   db:
     image: mysql:8.0
     ports:
