--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3"
+version: '3'
 services:
   backend:
     build:
@@ -10,6 +10,8 @@ services:
       - db
     volumes:
       - ./backend:/var/www/html
+    networks:
+      - app-network
     environment:
       - DB_HOST=db
       - DB_DATABASE=terra_energy
@@ -29,6 +31,8 @@ services:
       - VITE_API_URL=http://localhost:8000/api
     depends_on:
       - backend
+    networks:
+      - app-network
 
   db:
     image: mysql:8.0
@@ -39,6 +43,12 @@ services:
       MYSQL_ROOT_PASSWORD: root
     volumes:
       - mysql_data:/var/lib/mysql
+    networks:
+      - app-network
 
 volumes:
   mysql_data:
+
+networks:
+  app-network:
+    driver: bridge
